--- a/README
+++ b/README
@@ -18,7 +18,7 @@ Prueba que se establezca la conexión:
 
 ssh -T git@github.com
 
-Ahora clonamos
+Ahora clonamos el repositorio
 
 git clone https://github.com/tuUsuarioGit/repositorioAClonar
 
